# introduction-artificial-intelligence

./: .gitignore  projet-ab2.ipynb  projet.ipynb  pyproject.toml  readme.md
.ipynb_checkpoints/: projet-checkpoint.ipynb
docs/: index.html  sujet.html
gh_pages_root/: projet.html
