[tool.poetry]
name = "projet-pierre-latouche"
version = "0.1.0"
description = ""
authors = ["jExbrayat <jules.exbrayat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
torch = "^2.2.0"
scipy = "^1.12.0"
pyreadr = "^0.5.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
